refactor: update icon component styles and improve icon path handling

--- a/projects/iconic-demo/src/app/app.component.html
+++ b/projects/iconic-demo/src/app/app.component.html
@@ -41,6 +41,8 @@ import &#123; NgxIconicModule &#125; from 'ngx-iconic';
       <iconic icon="face"></iconic>
       <iconic icon="favorite" color="red"></iconic>
       <iconic icon="star" color="#FFD700"></iconic>
+      <iconic >mat_outline face</iconic>
+      <iconic >mat_solid face</iconic>
     </div>
 
     <pre><code class="language-html">
