feat: add icon browser component to app and update public API exports

--- a/projects/iconic-demo/src/app/app.component.html
+++ b/projects/iconic-demo/src/app/app.component.html
@@ -276,4 +276,10 @@ import &#123; NgxIconicModule &#125; from 'ngx-iconic';
       </tbody>
     </table>
   </section>
+
+  <!-- Icon Browser -->
+  <section class="docs-section">
+    <app-icon-browser></app-icon-browser>
+  </section>
 </div>
+
